--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -8,4 +8,10 @@
         android:title="@string/action_save"
         android:icon="@drawable/ic_save_white_24dp"
         app:showAsAction="always" />
+
+    <item
+        android:id="@+id/settings"
+        android:orderInCategory="103"
+        android:title="Settings"
+        app:showAsAction="never"/>
 </menu>
