--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -12,6 +12,7 @@
     <item
         android:id="@+id/settings"
         android:orderInCategory="103"
-        android:title="Settings"
-        app:showAsAction="never"/>
+        android:title="@string/settings"
+        android:icon="@drawable/ic_settings_white_24dp"
+        app:showAsAction="always"/>
 </menu>
