--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -15,7 +15,7 @@
         android:icon="@drawable/ic_settings_backup_restore_black_24dp"
         />
 
-    <item android:id="@+id/about"
+    <item android:id="@+id/settings"
         android:title="@string/settings"
         android:icon="@drawable/ic_settings_black_24dp"
         />
