chore: correct id's for drawer menu

--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -1,16 +1,16 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <item android:id="@+id/online"
+    <item android:id="@+id/downloads"
         android:title="@string/downloads"
         android:icon="@drawable/ic_file_download_black_24dp"
         />
-    <item android:id="@+id/offline"
+    <item android:id="@+id/favourites"
         android:title="@string/favourites"
         android:icon="@drawable/ic_favorite_black_24dp"
         />
 
     <item
-        android:id="@+id/trash"
+        android:id="@+id/restore"
         android:title="@string/restore_wallpaper"
         android:icon="@drawable/ic_settings_backup_restore_black_24dp"
         />
