--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -40,6 +40,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="bottom|end"
             android:layout_margin="@dimen/fab_margin"
+            android:contentDescription="@string/random_fab"
             android:src="@drawable/ic_refresh_white_24dp" />
 
         <android.support.design.widget.FloatingActionButton
@@ -48,6 +49,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="bottom|start"
             android:layout_margin="@dimen/fab_margin"
+            android:contentDescription="@string/set_fab"
             android:src="@drawable/ic_wallpaper_white_24dp" />
 
     </android.support.design.widget.CoordinatorLayout>
