--- a/app/src/main/res/drawable/side_nav_bar.xml
+++ b/app/src/main/res/drawable/side_nav_bar.xml
@@ -1,8 +1,8 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
-    android:shape="rectangle" >
+    android:shape="rectangle">
     <gradient
-        android:startColor="#303F9F"
+        android:angle="45"
         android:endColor="#008080"
-        android:type="linear"
-        android:angle="45"/>
+        android:startColor="#303F9F"
+        android:type="linear" />
 </shape>
