--- a/app/src/main/res/layout/image_fullscreen_preview.xml
+++ b/app/src/main/res/layout/image_fullscreen_preview.xml
@@ -10,7 +10,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_centerInParent="true"
-        android:scaleType="fitCenter"
-        android:contentDescription="@string/full_screen_image"/>
+        android:contentDescription="@string/full_screen_image"
+        android:scaleType="fitCenter" />
 
 </RelativeLayout>
