--- a/app/src/main/res/layout/recycler_item.xml
+++ b/app/src/main/res/layout/recycler_item.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<ImageView android:id="@+id/thumbnail"
+<ImageView xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/thumbnail"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:adjustViewBounds="true"
-    android:scaleType="fitXY"
     android:contentDescription="@string/gallery_image_cell"
-    xmlns:android="http://schemas.android.com/apk/res/android" />
+    android:scaleType="fitXY" />
