--- a/app/src/main/res/layout/widget_item.xml
+++ b/app/src/main/res/layout/widget_item.xml
@@ -4,11 +4,11 @@
     android:layout_height="wrap_content"
     android:orientation="vertical">
 
-  <ImageView
-      android:layout_width="match_parent"
-      android:layout_height="match_parent"
-      android:id="@+id/widgetImage"
-      android:scaleType="centerCrop"
-      android:contentDescription="@string/widget_list_image_item"/>
+    <ImageView
+        android:id="@+id/widgetImage"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:contentDescription="@string/widget_list_image_item"
+        android:scaleType="centerCrop" />
 
 </LinearLayout>
