--- a/app/src/main/res/layout/widget_layout.xml
+++ b/app/src/main/res/layout/widget_layout.xml
@@ -1,10 +1,10 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:padding="@dimen/widget_margin"
-    android:background="@color/colorBackgroundDark">
+    android:background="@color/colorBackgroundDark"
+    android:orientation="vertical"
+    android:padding="@dimen/widget_margin">
 
     <ListView
         android:id="@+id/widget_list"
@@ -12,7 +12,7 @@
         android:layout_height="match_parent"
         android:divider="@null"
         android:dividerHeight="0dp"
-        tools:listitem="@layout/widget_item"/>
+        tools:listitem="@layout/widget_item" />
 
 
 </LinearLayout>
