--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -1,19 +1,18 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <item android:id="@+id/downloads"
-        android:title="@string/downloads"
+    <item
+        android:id="@+id/downloads"
         android:icon="@drawable/ic_file_download_black_24dp"
-        />
+        android:title="@string/downloads" />
 
     <item
         android:id="@+id/restore"
-        android:title="@string/restore_wallpaper"
         android:icon="@drawable/ic_settings_backup_restore_black_24dp"
-        />
+        android:title="@string/restore_wallpaper" />
 
-    <item android:id="@+id/settings"
-        android:title="@string/settings"
+    <item
+        android:id="@+id/settings"
         android:icon="@drawable/ic_settings_black_24dp"
-        />
+        android:title="@string/settings" />
 
 </menu>
