Revert "Use PhotoView for main Image too"
This reverts commit 796dc82b0e1f6cf13f3f47beb44c984deabdeb5c.

--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -3,14 +3,12 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <com.github.chrisbanes.photoview.PhotoView
+    <ImageView
         android:id="@+id/imageView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_gravity="center"
-        android:adjustViewBounds="true"
         android:contentDescription="@string/main_wallpaper"
-        android:scaleType="fitCenter" />
+        android:scaleType="centerCrop" />
 
     <ProgressBar
         android:id="@+id/progressBar"
