--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -2,17 +2,17 @@
 
     <item
         android:id="@+id/downloads"
-        android:icon="@drawable/ic_file_download_black_24dp"
+        android:icon="@drawable/ic_download"
         android:title="@string/downloads" />
 
     <item
         android:id="@+id/restore"
-        android:icon="@drawable/ic_settings_backup_restore_black_24dp"
+        android:icon="@drawable/ic_restore"
         android:title="@string/restore_wallpaper" />
 
     <item
         android:id="@+id/settings"
-        android:icon="@drawable/ic_settings_black_24dp"
+        android:icon="@drawable/ic_settings"
         android:title="@string/settings" />
 
 </menu>
