--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -4,7 +4,7 @@
     tools:context="com.subhrajyoti.wallify.MainActivity">
     <item
         android:id="@+id/action_save"
-        android:icon="@drawable/ic_save_white_24dp"
+        android:icon="@drawable/ic_save"
         android:orderInCategory="100"
         android:title="@string/action_save"
         app:showAsAction="always" />
